[package]
name = "ecs-demo"
version = "0.1.0"
authors = ["Cora Sherratt <cora.sherratt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs="0.16"
specs-derive="0.4.1"
legion="0.2"
criterion = "0.3"
lazy_static = "1.4.0"
rand="0.7.3"
rayon="1.3.0"

[[bench]]
name = "benches"
harness = false

[profile.bench]
lto="thin"
